# claw-eval

./: .env.local.example  .gitignore  Dockerfile.openclaw  README.md  config_concurrency_smoke.yaml  config_multimodal.yaml  config_multimodal_smoke.yaml  config_user_agent_deepwisdom.yaml  pyproject.toml
docs/: ao_sandbox_path_estimate.md  ao_sandbox_verify.md  baseline_vs_ao_mechanism_analysis.md  category_guide.html  clarification_tasks_survey.md  decision.md  harness_design.md  infra_smoke_new_tasks.md  judge_model_effect_analysis.md  openclaw_web_tool_fix.md  progress.md  prompt_refactor_verify.md  rollout_ao_50task.md  rollout_ao_pi_5task.md  rollout_aorchestra_concurrency.md  rollout_harness_ab_5task_summary.md  rollout_mainagent_selfexec_validation.md  rollout_openclaw_50task.md  rollout_openclaw_5task.md  rollout_openclaw_concurrency.md  rollout_openclaw_gemini_regrade.md  rollout_openclaw_vs_baseline.md  rollout_scale_fixes.md  rollout_t057_multimodal_fix.md  sandbox_tools_feasibility.md
tests/: conftest.py  test_aorchestra_bridge.py  test_aorchestra_e2e.py  test_aorchestra_trace_adapter.py  test_aorchestra_user_agent.py  test_cli_batch_task_ids.py  test_cli_resolve_tasks_dir.py  test_grader_no_judge.py  test_harness_claweval_regression.py  test_harness_placeholders.py  test_openclaw_bridge_generator.py  test_openclaw_e2e.py  test_openclaw_e2e_container.py  test_openclaw_native_smoke.py  test_openclaw_sandbox_injection.py  test_openclaw_tool_policy.py  test_sandbox_frame_compression.py  test_search_serp_novada.py  test_trace_adapter_openclaw.py
(+151 files in other folders)
