[project]
name = "claw-eval"
version = "1.0.0"
description = "Agent evaluation framework for benchmarking AI agents in real-world personal assistant scenarios"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mock = ["fastapi>=0.115", "uvicorn>=0.30", "pypdf", "trafilatura>=1.8", "requests>=2.28"]
web = ["trafilatura>=1.8", "requests>=2.28"]
sandbox = ["docker>=7.0"]
dev = ["pytest>=8.0", "respx>=0.21"]
# AOrchestra extras — see docs/superpowers/specs/aorchestra_decision.md.
# AOrchestra itself is NOT pip-installable; users must additionally inject
# its source root on PYTHONPATH or via env var AORCHESTRA_ROOT.
aorchestra = [
    "aiofiles>=24.1.0",
    "litellm>=1.80.0",
    "loguru>=0.7.3",
    "PyYAML>=6.0.3",
    "tiktoken>=0.12.0",
    "respx>=0.21",
]

[project.scripts]
claw-eval = "claw_eval.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
